# recipe-card

./: .gitignore  README.md
recipe-card-builder/: docker-compose.yml
recipe-card-builder/.github/workflows/: ci.yml
recipe-card-builder/backend/: Dockerfile  pyproject.toml
recipe-card-builder/backend/app/: api.py  extract.py  main.py  models.py  tasks.py
recipe-card-builder/backend/app/templates/: card.html
recipe-card-builder/backend/tests/: test_api.py  test_extract.py  test_translation.py
recipe-card-builder/frontend/: next-env.d.ts  package.json  tsconfig.json
recipe-card-builder/frontend/components/: ProgressBar.tsx  RecipeEditor.tsx
recipe-card-builder/frontend/pages/: batch.tsx  index.tsx
