[tool.poetry]
name = "recipe-backend"
version = "0.1.0"
description = "Backend for Recipe Card Builder"
authors = ["Example <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
uvicorn = {version = "0.27.1", extras = ["standard"]}
SQLModel = "0.0.16"
sqlalchemy = "2.0.28"
redis = "5.0.1"
celery = "5.3.6"
youtube-transcript-api = "0.6.2"
spacy = "3.7.2"
jinja2 = "3.1.3"
weasyprint = "60.2"
langdetect = "1.0.9"
psycopg2-binary = "2.9.9"
transformers = "4.37.1"
torch = "2.4.1"

[tool.poetry.dev-dependencies]
pytest = "8.1.1"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
